@@ -6,6 +6,7 @@ import static teammates.common.util.Const.ERROR_UPDATE_NON_EXISTENT;
 import java.time.Instant;
 import java.util.Comparator;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import teammates.common.datatransfer.InstructorPermissionRole;
@@ -175,7 +176,7 @@ public final class CoursesLogic {
             return;
         }
 
-        List<FeedbackSession> feedbackSessions = course.getFeedbackSessions();
+        Set<FeedbackSession> feedbackSessions = course.getFeedbackSessions();
         feedbackSessions.forEach(feedbackSession ->
                 fsLogic.deleteFeedbackSessionCascade(feedbackSession.getId())
         );
@@ -252,7 +253,7 @@ public final class CoursesLogic {
                     + sectionName + " already exists in course " + course.getId());
         }
 
-        Section section = new Section(course, sectionName);
+        Section section = new Section(sectionName);
         course.addSection(section);
 
         validateSection(section);
@@ -283,8 +284,9 @@ public final class CoursesLogic {
 
         return course.getSections()
                 .stream()
-                .map(section -> section.getName())
-                .collect(Collectors.toList());
+                .map(Section::getName)
+                .sorted()
+                .toList();
     }
 
     /**
@@ -297,7 +299,7 @@ public final class CoursesLogic {
                     + teamName + " already exists in section " + section.getId());
         }
 
-        Team team = new Team(section, teamName);
+        Team team = new Team(teamName);
         section.addTeam(team);
 
         validateTeam(team);
